--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "blis"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["sarah <>"]
+description = "Rust bindings for BLIS"
+readme = "README.md"
+repository = "https://github.com/kitegi/blis-sys/"
+license = "MIT"
+keywords = ["linear-algebra"]
 
 [dependencies]
 blis-sys = "0.1.2"
