--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "blis"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["sarah <>"]
 description = "Rust bindings for BLIS"
 readme = "README.md"
-repository = "https://github.com/kitegi/blis-sys/"
+repository = "https://github.com/kitegi/blis-rs/"
 license = "MIT"
 keywords = ["linear-algebra"]
 
