--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ keywords = ["linear-algebra"]
 [dependencies]
 blis-sys = "0.1.2"
 reborrow = "0.2.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "blis"
+harness = false
